# PROYECTO_IA

mancala-fixed/: .gitignore  README.md
mancala-fixed/.github/workflows/: ci-cd.yml
mancala-fixed/backend/: Dockerfile  requirements.txt
mancala-fixed/backend/app/: main.py
mancala-fixed/backend/tests/: test_api.py
mancala-fixed/deploy/cloud/: k8s-cloud.yaml
mancala-fixed/deploy/local/: docker-compose.yml
mancala-fixed/deploy/local/k8s/: backend.yaml  configmap.yaml  frontend.yaml  motor.yaml  namespace.yaml
mancala-fixed/docs/: 01-arquitectura.md  02-motor.md  03-paralelizacion.md  04-despliegue-local.md  05-despliegue-nube.md  06-cicd.md  07-analisis-comparativo.md  08-conclusiones.md  README.md
mancala-fixed/frontend/: Dockerfile  nginx.conf
mancala-fixed/frontend/html/: index.html
mancala-fixed/motor/: CMakeLists.txt  Dockerfile
mancala-fixed/motor/bench/: benchmark.cpp  suite.txt
mancala-fixed/motor/src/: alphabeta.hpp  board.hpp  mcts.hpp  server.cpp
mancala-fixed/motor/tests/: test_main.cpp
